--- a/FtcRobotController-master/build.common.gradle
+++ b/FtcRobotController-master/build.common.gradle
@@ -105,6 +105,7 @@ android {
 repositories {
     flatDir {
         dirs rootProject.file('libs')
+        jcenter()
     }
 }
 apply from: 'build.release.gradle'
